--- a/results.html
+++ b/results.html
@@ -4,57 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Results - ZENOA</title>
+    <title>Match Report - ZENOA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <div class="container" style="max-width: 900px; padding-top: 3rem;">
-        <h1 style="text-align: center; margin-bottom: 2rem;">Match Report</h1>
+<body style="padding-top: 4rem;">
+    <div class="container" style="max-width: 900px;">
+        <div style="text-align: center; margin-bottom: 2rem;">
+            <div style="text-transform: uppercase; letter-spacing: 2px; color: var(--text-secondary);">Mission Complete
+            </div>
+            <h1 style="font-size: 3rem; margin-top: 0.5rem; text-shadow: 0 0 30px rgba(255,255,255,0.2);">After-Action
+                Report</h1>
+        </div>
 
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin-bottom: 3rem;">
-            <!-- Personal Card -->
-            <div class="card">
-                <h2>Your Analysis</h2>
-                <div id="dominant-hero"
-                    style="font-size: 2rem; color: var(--accent-color); font-weight: 700; margin-bottom: 0.5rem;">
-                    Calculating...</div>
-                <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">Based on your decisions in this session.
-                </p>
+        <div class="match-report-grid">
+            <!-- PERFORMANCE CARD -->
+            <div class="card"
+                style="border: 1px solid var(--accent-color); box-shadow: 0 0 20px rgba(0, 242, 255, 0.1);">
+                <div style="display: flex; justify-content: space-between; align-items: start;">
+                    <h2 style="margin: 0;">Performance</h2>
+                    <div id="new-badges"></div>
+                </div>
 
-                <div style="display: flex; flex-direction: column; gap: 1rem;">
-                    <div class="stat-row">
-                        <span>Logical</span> <span id="r-logical">0</span>
-                    </div>
-                    <div class="stat-row">
-                        <span>Strategic</span> <span id="r-strategic">0</span>
-                    </div>
-                    <div class="stat-row">
-                        <span>Social</span> <span id="r-social">0</span>
-                    </div>
-                    <div class="stat-row">
-                        <span>Political</span> <span id="r-political">0</span>
-                    </div>
-                    <div class="stat-row">
-                        <span>Adaptive</span> <span id="r-adaptive">0</span>
+                <div style="text-align: center; padding: 2rem 0;">
+                    <div style="font-size: 0.9rem; color: var(--text-secondary); text-transform: uppercase;">Dominant
+                        Intelligence</div>
+                    <div id="dominant-hero"
+                        style="font-size: 2.5rem; font-weight: 900; color: #fff; text-shadow: 0 0 10px var(--accent-color); margin: 0.5rem 0;">
+                        CALCULATING...
                     </div>
                 </div>
 
-                <div id="new-badges" style="margin-top: 1.5rem; display: flex; gap: 0.5rem; flex-wrap: wrap;"></div>
+                <div style="display: flex; flex-direction: column; gap: 0.8rem;">
+                    <div class="stat-row"><span>Logical</span> <span id="r-logical" style="font-weight: 700;">0</span>
+                    </div>
+                    <div class="stat-row"><span>Strategic</span> <span id="r-strategic"
+                            style="font-weight: 700;">0</span></div>
+                    <div class="stat-row"><span>Social</span> <span id="r-social" style="font-weight: 700;">0</span>
+                    </div>
+                    <div class="stat-row"><span>Political</span> <span id="r-political"
+                            style="font-weight: 700;">0</span></div>
+                    <div class="stat-row"><span>Adaptive</span> <span id="r-adaptive" style="font-weight: 700;">0</span>
+                    </div>
+                </div>
             </div>
 
-            <!-- Leaderboard Card -->
-            <div class="card">
-                <h2>Room Rankings</h2>
-                <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">Relative performance.</p>
-                <div id="leaderboard-list" style="display: flex; flex-direction: column; gap: 1rem;">
-                    <!-- List items -->
+            <!-- XP & RANKING CARD -->
+            <div style="display: flex; flex-direction: column; gap: 2rem;">
+                <!-- XP GAIN -->
+                <div class="card">
+                    <h2 style="font-size: 1.2rem; color: var(--text-secondary);">Progression</h2>
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 0.5rem;">
+                        <span style="font-size: 1.5rem; font-weight: 700; color: var(--success-color);">+ <span
+                                id="xp-gained">0</span> XP</span>
+                        <span id="new-total-score" style="font-size: 0.9rem;">Total: 0</span>
+                    </div>
+                    <!-- Animated Bar Placeholder -->
+                    <div class="xp-container">
+                        <div id="xp-bar-fill" class="xp-fill" style="width: 100%; background: var(--success-color);">
+                        </div>
+                    </div>
+
+                    <div id="tier-promo-msg" class="hidden"
+                        style="margin-top: 1rem; text-align: center; padding: 1rem; background: rgba(255,215,0,0.1); border: 1px solid var(--tier-gold); color: var(--tier-gold); border-radius: 4px; font-weight: 700;">
+                        🏆 PROMOTED TO <span id="new-tier-name">GOLD</span> TIER
+                    </div>
+                </div>
+
+                <!-- LEADERBOARD -->
+                <div class="card" style="flex: 1;">
+                    <h2 style="font-size: 1.2rem; color: var(--text-secondary);">Squad Ranking</h2>
+                    <div id="leaderboard-list"
+                        style="display: flex; flex-direction: column; gap: 0.8rem; margin-top: 1rem;">
+                        <!-- JS Injected -->
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div style="text-align: center;">
-            <a href="dashboard.html" class="btn btn-primary">Return to Dashboard</a>
+        <div style="text-align: center; margin-top: 3rem; margin-bottom: 4rem;">
+            <a href="dashboard.html" class="btn btn-primary" style="padding: 1rem 3rem; font-size: 1.1rem;">RETURN TO
+                BASE</a>
         </div>
     </div>
 
@@ -62,23 +93,19 @@
         .stat-row {
             display: flex;
             justify-content: space-between;
-            border-bottom: 1px solid var(--border-color);
-            padding-bottom: 0.5rem;
+            padding: 0.5rem;
+            background: rgba(255, 255, 255, 0.02);
+            border-radius: 4px;
         }
 
         .rank-item {
-            background: var(--surface-hover);
-            padding: 1rem;
-            border-radius: var(--radius-sm);
             display: flex;
             justify-content: space-between;
             align-items: center;
-        }
-
-        .rank-pos {
-            font-weight: 700;
-            margin-right: 1rem;
-            color: var(--text-secondary);
+            padding: 0.8rem;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 4px;
+            border-left: 2px solid transparent;
         }
     </style>
 
@@ -97,30 +124,43 @@
 
         onAuthStateChanged(auth, async (user) => {
             if (user && !hasCalculated) {
-                hasCalculated = true; // Prevent double calc
+                hasCalculated = true;
 
                 // 1. Calculate & Save My Results (Once)
                 const myResults = await calculateAndSaveResults(roomId, user.uid);
 
                 if (myResults) {
-                    document.getElementById('dominant-hero').textContent = myResults.dominantType;
-                    // stats display...
+                    document.getElementById('dominant-hero').textContent = myResults.dominantType.toUpperCase();
+
                     document.getElementById('r-logical').textContent = myResults.stats.logical || 0;
                     document.getElementById('r-strategic').textContent = myResults.stats.strategic || 0;
                     document.getElementById('r-social').textContent = myResults.stats.social || 0;
                     document.getElementById('r-political').textContent = myResults.stats.political || 0;
                     document.getElementById('r-adaptive').textContent = myResults.stats.adaptive || 0;
 
+                    // XP & Tiers
+                    if (myResults.xpGained) {
+                        document.getElementById('xp-gained').textContent = myResults.xpGained;
+                        document.getElementById('new-total-score').textContent = `Total: ${Math.floor(myResults.newTotalScore)}`;
+
+                        if (myResults.isPromoted) {
+                            const promoBox = document.getElementById('tier-promo-msg');
+                            promoBox.classList.remove('hidden');
+                            document.getElementById('new-tier-name').textContent = myResults.newTier;
+                            promoBox.className = `tier-badge tier-${myResults.newTier.toLowerCase()}`;
+                            promoBox.style.display = 'block';
+                            promoBox.style.fontSize = '1.2rem';
+                            promoBox.style.marginTop = '1rem';
+                        }
+                    }
+
                     if (myResults.badges.length > 0) {
                         const bag = document.getElementById('new-badges');
                         myResults.badges.forEach(b => {
                             const sp = document.createElement('span');
-                            sp.textContent = `+ ${b}`;
-                            sp.style.background = 'var(--success-color)';
-                            sp.style.color = 'black';
-                            sp.style.padding = '2px 8px';
-                            sp.style.borderRadius = '4px';
-                            sp.style.fontSize = '0.8rem';
+                            sp.textContent = b;
+                            sp.className = 'tier-badge tier-gold'; // Reusing gold style for new badges
+                            sp.style.fontSize = '0.7rem';
                             bag.appendChild(sp);
                         });
                     }
@@ -145,21 +185,21 @@
             leaderboard.forEach((p, idx) => {
                 const div = document.createElement('div');
                 div.className = 'rank-item';
-                // Highlight self
+
                 if (p.uid === currentUid) {
-                    div.style.border = '1px solid var(--accent-color)';
+                    div.style.background = 'rgba(0, 242, 255, 0.1)';
+                    div.style.borderLeftColor = 'var(--accent-color)';
                 }
+
                 div.innerHTML = `
-                    <div style="display:flex; align-items:center;">
-                        <span class="rank-pos">#${idx + 1}</span>
+                    <div style="display:flex; align-items:center gap: 1rem;">
+                        <span style="font-weight: 700; color: #888; width: 25px;">#${idx + 1}</span>
                         <div>
-                            <div style="font-weight:600;">${p.username}</div>
-                            <div style="font-size:0.8rem; color:var(--text-secondary);">${p.dominantType}</div>
+                            <div style="font-weight:700; font-size: 0.95rem;">${p.username}</div>
+                            <div style="font-size:0.7rem; color:var(--text-secondary); text-transform: uppercase;">${p.dominantType}</div>
                         </div>
                     </div>
-                    <div style="display:flex; flex-direction:column; align-items:flex-end;">
-                        <div style="font-weight:700;">${p.score} pts</div>
-                    </div>
+                    <div style="font-weight:700; color: var(--accent-color);">${p.score}</div>
                 `;
                 list.appendChild(div);
             });
