--- a/room.html
+++ b/room.html
@@ -9,65 +9,77 @@
 </head>
 
 <body>
-    <div class="container" style="max-width: 800px; padding-top: 4rem;">
-        <div class="card" style="text-align: center;">
-            <p style="text-transform: uppercase; letter-spacing: 1px; color: var(--text-secondary);">Room Code</p>
-            <h1 id="room-code-display" style="font-size: 4rem; margin: 0.5rem 0 2rem 0; color: var(--accent-color);">...
-            </h1>
+    <div class="container" style="max-width: 900px; padding-top: 4rem;">
 
-            <div style="margin-bottom: 2rem;">
-                <p>Share this code with friends or copy the link:</p>
-                <div style="display: flex; gap: 0.5rem; justify-content: center;">
-                    <input type="text" id="share-link" readonly
-                        style="width: auto; min-width: 300px; text-align: center;">
-                    <button class="btn btn-secondary" id="copy-btn">Copy</button>
-                </div>
-                <div id="connection-status"
-                    style="margin-top: 1rem; font-size: 0.8rem; color: var(--text-secondary); opacity: 0.7;">
-                    Connecting to live updates...
+        <!-- HEADER / CODE -->
+        <div style="text-align: center; margin-bottom: 3rem;">
+            <div
+                style="font-size: 0.9rem; letter-spacing: 2px; text-transform: uppercase; color: var(--text-secondary); margin-bottom: 0.5rem;">
+                Mission Lobby</div>
+            <div class="room-code-display" id="room-code-display">...</div>
+
+            <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 1rem;">
+                <button class="btn btn-secondary" id="copy-btn" style="padding: 0.5rem 1.5rem; font-size: 0.8rem;">
+                    <span style="opacity: 0.7;">COPY INVITE LINK</span>
+                </button>
+                <input type="text" id="share-link" readonly style="position: absolute; left: -9999px;">
+            </div>
+            <div id="connection-status" style="margin-top: 1rem; font-size: 0.8rem; color: var(--text-secondary);">
+                Connecting to server...
+            </div>
+        </div>
+
+        <div class="card" style="min-height: 400px; display: flex; flex-direction: column;">
+            <div
+                style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--surface-border); padding-bottom: 1rem; margin-bottom: 1rem;">
+                <h3 style="margin: 0; font-size: 1.2rem;">Operatives <span id="player-count"
+                        style="color: var(--accent-color);">(0)</span></h3>
+                <div id="waiting-msg" style="font-size: 0.9rem; color: var(--text-secondary); font-style: italic;">
+                    Waiting for host...
                 </div>
             </div>
 
-            <hr style="border: 0; border-top: 1px solid var(--border-color); margin: 2rem 0;">
+            <div id="players-list" class="player-grid">
+                <!-- JS Injected -->
+            </div>
 
-            <div style="text-align: left;">
-                <h3 style="margin-bottom: 1rem;">Players <span id="player-count">(0)</span></h3>
-                <div id="players-list"
-                    style="display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 1rem;">
-                    <!-- Player Cards Injected Here -->
+            <div style="margin-top: auto; padding-top: 2rem; text-align: center;">
+                <div id="host-controls" class="hidden">
+                    <button id="start-game-btn" class="btn btn-primary"
+                        style="width: 100%; padding: 1.2rem; font-size: 1.2rem; letter-spacing: 2px;">
+                        INITIATE MISSION
+                    </button>
+                    <p style="margin-top: 1rem; font-size: 0.8rem; color: var(--text-secondary);">
+                        As host, you control when the assessment begins.
+                    </p>
                 </div>
-            </div>
-
-            <div id="host-controls" class="hidden" style="margin-top: 3rem;">
-                <p style="margin-bottom: 1rem; font-style: italic;">Detailed rules will be shown in game.</p>
-                <button id="start-game-btn" class="btn btn-primary" style="font-size: 1.2rem; padding: 1rem 3rem;">Start
-                    Game</button>
-            </div>
-            <div id="waiting-msg" style="margin-top: 3rem; color: var(--text-secondary); font-style: italic;">
-                Waiting for host to start...
             </div>
         </div>
     </div>
 
     <!-- City Prompt Modal -->
     <div id="city-modal" class="hidden"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 100; display: flex; align-items: center; justify-content: center;">
-        <div class="card" style="width: 90%; max-width: 400px; text-align: center;">
-            <h2 style="margin-bottom: 1rem;">One last thing...</h2>
-            <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">To rank you on the City Leaderboard, we need
-                to know where you represent.</p>
-            <input type="text" id="city-input" placeholder="Enter your City (e.g. New York)"
-                style="width: 100%; padding: 0.8rem; margin-bottom: 1rem; background: var(--surface-hover); border: 1px solid var(--border-color); color: white; border-radius: 4px;">
-            <button id="save-city-btn" class="btn btn-primary btn-block">Save & Join</button>
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); backdrop-filter: blur(5px); z-index: 100; display: flex; align-items: center; justify-content: center;">
+        <div class="card"
+            style="width: 90%; max-width: 400px; text-align: center; border: 1px solid var(--accent-color); box-shadow: 0 0 30px rgba(0, 242, 255, 0.2);">
+            <h2 style="margin-bottom: 1rem; color: var(--accent-color);">Identify Sector</h2>
+            <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Enter your city or region for the global
+                leaderboard.</p>
+            <input type="text" id="city-input" placeholder="e.g. Neo Tokyo"
+                style="width: 100%; padding: 1rem; margin-bottom: 1.5rem; background: rgba(0,0,0,0.5); border: 1px solid var(--surface-border); color: white; text-align: center; font-size: 1.1rem;">
+            <button id="save-city-btn" class="btn btn-primary btn-block">CONFIRM IDENTITY</button>
         </div>
     </div>
 
     <!-- Countdown Overlay -->
     <div id="countdown-overlay" class="hidden"
         style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg-color); z-index: 200; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
-        <h1 style="font-size: 2.5rem; color: var(--accent-color); margin-bottom: 2rem;">Let's see who is smartest in
-            your group...</h1>
-        <div id="countdown-timer" style="font-size: 6rem; font-weight: 800; color: white;">3</div>
+        <h1
+            style="font-size: 2rem; color: var(--text-secondary); margin-bottom: 2rem; text-transform: uppercase; letter-spacing: 5px;">
+            Mission Launching</h1>
+        <div id="countdown-timer"
+            style="font-size: 10rem; font-weight: 900; color: var(--accent-color); text-shadow: 0 0 50px var(--accent-color);">
+            3</div>
     </div>
 
     <script type="module">
@@ -79,9 +91,7 @@
         const urlParams = new URLSearchParams(window.location.search);
         const roomId = urlParams.get('roomId');
 
-        if (!roomId) {
-            window.location.href = 'dashboard.html';
-        }
+        if (!roomId) window.location.href = 'dashboard.html';
 
         document.getElementById('room-code-display').textContent = roomId;
         document.getElementById('share-link').value = window.location.href;
@@ -92,8 +102,11 @@
             copyText.select();
             copyText.setSelectionRange(0, 99999);
             navigator.clipboard.writeText(copyText.value);
-            document.getElementById('copy-btn').textContent = "Copied!";
-            setTimeout(() => { document.getElementById('copy-btn').textContent = "Copy"; }, 2000);
+
+            const btn = document.getElementById('copy-btn');
+            const originalText = btn.innerHTML;
+            btn.innerHTML = '<span style="color: var(--success-color);">LINK COPIED</span>';
+            setTimeout(() => { btn.innerHTML = originalText; }, 2000);
         });
 
         let currentUser = null;
@@ -114,15 +127,15 @@
             if (snap.exists()) {
                 const data = snap.data();
                 if (!data.city || data.city === "Unknown") {
-                    // Show Modal
                     const modal = document.getElementById('city-modal');
                     modal.classList.remove('hidden');
-                    modal.style.display = 'flex'; // Override hidden class styles if needed or just use flex
+                    modal.style.display = 'flex'; // Flex override
 
                     document.getElementById('save-city-btn').addEventListener('click', async () => {
                         const cityVal = document.getElementById('city-input').value.trim();
                         if (cityVal) {
                             await updateDoc(userRef, { city: cityVal });
+                            modal.classList.add('hidden');
                             modal.style.display = 'none';
                         }
                     });
@@ -131,53 +144,50 @@
         }
 
         function initRoomListener() {
-            document.getElementById('connection-status').textContent = "🔴 Connecting...";
+            const statusEl = document.getElementById('connection-status');
 
             subscribeToRoom(roomId, (roomData) => {
-                document.getElementById('connection-status').textContent = "🟢 Live Connected";
+                statusEl.textContent = "🟢 SECURE CONNECTION ESTABLISHED";
+                statusEl.style.color = "var(--success-color)";
 
                 if (!roomData) {
-                    alert("Room does not exist or was deleted.");
+                    alert("Room terminated.");
                     window.location.href = 'dashboard.html';
                     return;
                 }
 
-                // Redirect if game started
                 if (roomData.status === 'playing') {
-                    // Start Countdown Sequence
                     launchCountdown();
                     return;
                 }
 
-                // Update Player List
+                // Players
                 const list = document.getElementById('players-list');
                 list.innerHTML = '';
                 document.getElementById('player-count').textContent = `(${roomData.players.length})`;
 
                 roomData.players.forEach(p => {
                     const el = document.createElement('div');
-                    el.style.background = 'var(--surface-color)';
-                    el.style.padding = '1rem';
-                    el.style.borderRadius = 'var(--radius-md)';
-                    el.style.border = '1px solid var(--border-color)';
-                    el.style.textAlign = 'center';
-                    el.innerHTML = `<strong>${p.username}</strong>`;
-                    if (p.uid === currentUser.uid) {
-                        el.style.borderColor = 'var(--accent-color)';
-                    }
-                    if (p.uid === roomData.hostId) {
-                        el.innerHTML += '<br><span style="font-size:0.8rem; color: #fbbf24;">HOST</span>';
-                    }
+                    el.className = 'player-card';
+                    if (p.uid === currentUser.uid) el.classList.add('is-me');
+                    if (p.uid === roomData.hostId) el.classList.add('is-host');
+
+                    // Avatar placeholder could go here
+                    el.innerHTML = `
+                        <div style="font-size: 2rem; margin-bottom: 0.5rem;">👤</div>
+                        <div style="font-weight: 700; font-size: 0.9rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${p.username}</div>
+                    `;
+
                     list.appendChild(el);
                 });
 
                 // Host Controls
                 if (currentUser.uid === roomData.hostId) {
                     document.getElementById('host-controls').classList.remove('hidden');
-                    document.getElementById('waiting-msg').classList.add('hidden');
+                    document.getElementById('waiting-msg').innerHTML = '<span style="color: var(--warning-color);">YOU ARE THE HOST</span>';
                 } else {
                     document.getElementById('host-controls').classList.add('hidden');
-                    document.getElementById('waiting-msg').classList.remove('hidden');
+                    document.getElementById('waiting-msg').innerHTML = 'Waiting for Mission Control...';
                 }
             });
         }
@@ -201,7 +211,7 @@
                     timer.textContent = count;
                 } else {
                     clearInterval(interval);
-                    timer.textContent = "GO!";
+                    timer.textContent = "GO";
                     setTimeout(() => {
                         window.location.href = `play.html?roomId=${roomId}`;
                     }, 500);
@@ -212,13 +222,13 @@
         document.getElementById('start-game-btn').addEventListener('click', async () => {
             const btn = document.getElementById('start-game-btn');
             btn.disabled = true;
-            btn.textContent = "Starting...";
+            btn.innerHTML = "INITIALIZING...";
             try {
                 await startGame(roomId);
             } catch (e) {
                 console.error(e);
                 btn.disabled = false;
-                btn.textContent = "Start Game";
+                btn.innerHTML = "INITIATE MISSION";
             }
         });
     </script>
